--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tungstenite = "0.13"
+url = "2.2"
