--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "orderbook"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "orderbook-server"
+path = "src/server.rs"
+
 [dependencies]
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
@@ -12,3 +16,8 @@ tungstenite = "0.13"
 url = "2.2"
 priority-queue = "1.3"
 tokio-tungstenite = "0.15"
+tonic = "0.9"
+prost = "0.11"
+
+[build-dependencies]
+tonic-build = "0.9"
