--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "orderbook-server"
 path = "src/server.rs"
 
+[[bin]]
+name = "orderbook-client"
+path = "src/client.rs"
+
 [dependencies]
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
